动态产生模型和表的对应关系模型     eg:     '''     class TemplateModel(db.Model):         __abstract__ = True         id = db.Column(db.Integer(), autoincrement=True, primary_key=True)
    Test_2018 = NewDynamicModel(TemplateModel, 'tb_test_2017')
    print Test_2018.query.all()

--- a/app/templates/home/day.html
+++ b/app/templates/home/day.html
@@ -91,4 +91,17 @@
         });
     </script>
 
+    <script>
+        $(document).ready(function () {
+            {# 获取数据 #}
+            $.ajax({
+                type: "POST",
+                url: "{{ url_for('home.get_day_data') }}",
+                data: "name=John&location=Boston",
+                success: function (msg) {
+                   console.log(msg);
+                }
+            });
+        });
+    </script>
 {% endblock %}
