--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Gentelella Alela! | </title>
+    <title>订阅管理平台 </title>
 
     <!-- Bootstrap -->
     <link href="{{ url_for('static',filename='vendors/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -15,7 +15,7 @@
     <link href="{{ url_for('static',filename='vendors/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
     <!-- NProgress -->
     <link href="{{ url_for('static',filename='vendors/nprogress/nprogress.css') }}" rel="stylesheet">
-
+    <link rel="icon" href="{{ url_for('static',filename='images/logo.png') }}" type="image/gif" sizes="16x16">
     {% block css %}
 
     {% endblock %}
