--- a/app/templates/home/bluecons_list.html
+++ b/app/templates/home/bluecons_list.html
@@ -20,7 +20,7 @@
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     <div class="x_panel">
                         <div class="x_title">
-                            <h2>BlueCoin日志</h2>
+                            <h2>BlueCoin导出</h2>
                             <ul class="nav navbar-right panel_toolbox">
                                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                                 </li>
