优化资源加载

--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -106,7 +106,7 @@
     <script src="{{ url_for('static',filename='vendors/bootstrap-progressbar/bootstrap-progressbar.min.js') }}"></script>
     <script src="{{ url_for('static',filename='vendors/iCheck/icheck.min.js') }}"></script>
     <!-- echarts -->
-    <script src="{{ url_for('static',filename='vendors/echarts/echarts.js') }}"></script>
+    <script src="{{ url_for('static',filename='vendors/echarts/echarts.min.js') }}"></script>
     <script>
         $(document).ready(function () {
             var option = {
