--- a/app/templates/home/day.html
+++ b/app/templates/home/day.html
@@ -107,7 +107,7 @@
 
 {% block js %}
     <!-- echarts -->
-    <script src="{{ url_for('static',filename='vendors/echarts/echarts.js') }}"></script>
+    <script src="{{ url_for('static',filename='vendors/echarts/echarts.min.js') }}"></script>
     <!-- bootstrap-daterangepicker -->
     <script src="{{ url_for('static',filename='vendors/moment/min/moment.min.js') }}"></script>
     <script src="{{ url_for('static',filename='vendors/bootstrap-daterangepicker/daterangepicker.js') }}"></script>
