动态添加定位任务

--- a/app/templates/home/login.html
+++ b/app/templates/home/login.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>订阅管理平台</title>
+    <title>小看管理平台</title>
 
     <!-- Bootstrap -->
     <link href="{{ url_for('static',filename='vendors/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -34,7 +34,7 @@
             <section class="login_content">
                 {# 登录用户 #}
                 <form method="post">
-                    <h1>订阅管理平台</h1>
+                    <h1>小看管理平台</h1>
                     <div>
                         {{ form.name }}
                          {% for err in form.name.errors %}
