--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>订阅管理平台 </title>
+    <title>小看管理平台</title>
 
     <!-- Bootstrap -->
     <link href="{{ url_for('static',filename='vendors/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
