1、定时任务操作提示 2、下载充值卡功能 3、优化充值卡提示，定时任务格式说明

--- a/app/templates/home/bluecons_list.html
+++ b/app/templates/home/bluecons_list.html
@@ -60,6 +60,7 @@
                                     {{ form.csrf_token }}
                                 </div>
                             </form>
+                            <p>生成卡号会以追加形式写入文件，列表中最靠前为最全的</p>
                         </div>
                         <div class="x_content">
 
@@ -79,7 +80,7 @@
                                         <td>{{ v.id }}</td>
                                         <td>{{ v.name }}</td>
                                         <td>{{ v.result }}</td>
-                                        <td>{{ v.filename }}</td>
+                                        <td><a target="_blank" href="{{ url_for('static', filename=v.filename) }}" >{{ v.filename }}</a></td>
                                         <td>{{ v.create_time }}</td>
                                     </tr>
                                 {% endfor %}
