解决性能问题

--- a/app/templates/home/elastics.html
+++ b/app/templates/home/elastics.html
@@ -97,6 +97,9 @@
                             <th>msisdn</th>
                             <th>price</th>
                             <th>producer_id</th>
+                            <th>product_id</th>
+                            <th>innerid</th>
+                            <th>telco_name</th>
                         </tr>
                         </thead>
 
@@ -188,7 +191,10 @@
                          {data: 'currency'},
                          {data: 'msisdn'},
                          {data: 'price'},
-                         {data: 'producer_id'}
+                         {data: 'producer_id'},
+                         {data: 'product_id'},
+                         {data: 'innerid'},
+                         {data: 'telco_name'}
                      ]
 
                 });
