--- a/app/templates/home/job_list.html
+++ b/app/templates/home/job_list.html
@@ -25,7 +25,7 @@
                 <div class="col-md-12 col-sm-12 col-xs-12">
                     {# 提示信息 #}
                     {% include 'common/message.html' %}
-                    <div class="col-md-4 col-sm-12 col-xs-12">
+                    <!--div class="col-md-4 col-sm-12 col-xs-12">
                         <div class="x_panel">
                             <div class="x_title">
                                 <h2>新增任务<small><a target="_blank" href="http://debugo.com/apscheduler/">手册</a></small></h2>
@@ -121,8 +121,8 @@
                             </div>
                         </div>
 
-                    </div>
-                    <div class="col-md-8 col-sm-12 col-xs-12">
+                    </div-->
+                    <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="x_panel">
                             <div class="x_title">
                                 <h2>任务日志</h2>
@@ -210,7 +210,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12 col-sm-12 col-xs-12">
+                    <!--div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="x_panel">
                             <div class="x_title">
                                 <h2>任务列表</h2>
@@ -267,7 +267,7 @@
                                 </table>
                             </div>
                         </div>
-                    </div>
+                    </div-->
 
                 </div>
             </div>
