时不时出现分页出错BUG

--- a/app/templates/common/sidebar.html
+++ b/app/templates/common/sidebar.html
@@ -35,8 +35,8 @@
             </li>
             <li><a><i class="fa fa-table"></i> 数据查询 <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                    <li><a href="{{ url_for('home.blue_coins',page=1) }}">BlueCoin</a></li>
-                    <li><a href="{{ url_for('home.job_list' , page=1) }}">定时任务</a></li>
+                    <li><a href="{{ url_for('home.bluecoin',page=1) }}">BlueCoin</a></li>
+                    <li><a href="{{ url_for('home.backup',page=1) }}">备份日志</a></li>
                     <li><a href="{{ url_for('home.elastics')}}">E S 查询</a></li>
                 </ul>
             </li>
