--- a/app/templates/home/bluecoin.html
+++ b/app/templates/home/bluecoin.html
@@ -42,7 +42,7 @@
                         {# 提示信息 #}
                         {% include 'common/message.html' %}
                         <div class="tile-stats">
-                            <form method="post" action="{{ url_for('home.blue_coins',page=1) }}" class="form-inline" style="margin-top: 5px;margin-left: 10px;">
+                            <form method="post" action="{{ url_for('home.bluecoin',page=1) }}" class="form-inline" style="margin-top: 5px;margin-left: 10px;">
                                 <div class="form-group">
                                     {{ form.amount }}
                                     {% for err in form.amount.errors %}
@@ -86,7 +86,7 @@
                                 {% endfor %}
                                 </tbody>
                             </table>
-                            {{ paginate_page.page(page_data,'home.job_list') }}
+                            {{ paginate_page.page(page_data,'home.bluecoin') }}
                         </div>
                     </div>
                 </div>
