--- a/app/templates/home/backup.html
+++ b/app/templates/home/backup.html
@@ -1,5 +1,4 @@
 {% extends 'home/home.html' %}
-
 {% import "common/page.html" as paginate_page %}
 
 {% block css %}
@@ -206,7 +205,7 @@
                                     {% endfor %}
                                     </tbody>
                                 </table>
-                                {{ paginate_page.page(page_data,'home.job_list') }}
+                                {{ paginate_page.page(page_data,'home.backup') }}
                             </div>
                         </div>
                     </div>
