--- a/app/templates/common/page.html
+++ b/app/templates/common/page.html
@@ -5,16 +5,24 @@
         <ul class="pagination pagination-sm no-margin pull-right">
             <li><a href="{{ url_for(url,page=1) }}">首页</a></li>
             {% if data.has_prev %}
-                <li><a href="{{ url_for(url,page=data.prev_num) }}">上一页</a></li>
+                <li><a href="{{ url_for(url,page=data.prev_num,**kwargs) }}">上一页</a></li>
             {% else %}
                 <li class="disabled"><a href="#">上一页</a></li>
             {% endif %}
 
-            {% for v in data.iter_pages() %}
-                {% if v == data.page %}
-                    <li class="active"><a href="#">{{ v }}</a></li>
+            {% for p in data.iter_pages() %}
+                {% if p %}
+                    {% if p == data.page %}
+                        <li class="active">
+                            <a href="{{ url_for(url, page = p, **kwargs) }}">{{ p }}</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <a href="{{ url_for(url, page = p, **kwargs) }}">{{ p }}</a>
+                        </li>
+                    {% endif %}
                 {% else %}
-                    <li><a href="{{ url_for(url,page=v) }}">{{ v }}</a></li>
+                    <li class="disabled"><a href="#">…</a></li>
                 {% endif %}
             {% endfor %}
 
